post y get hechos

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -15,4 +15,7 @@
         <button (click)="isLoggedIn= true" >Log In</button>
     }
 <app-games></app-games>
+<app-home></app-home>
+
 </section>
+
