get e inicio de sesión funcionando

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,9 @@
-<h1>Get Method</h1>
-<p>{{getJsonValue.title }}</p>
-<h1>Post Method</h1>
-<p>{{postJsonValue.title}}</p>
+<div class="container">
+    <div class="box">
+      <h2>Formulario</h2>
+      <input type="text" #username placeholder="Usuario">
+      <input type="password" #password placeholder="Contraseña">
+      <button (click)="isLoggedIn(username.value, password.value)">Log In</button>
+    </div>
+  </div>
+  
