--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,30 +3,31 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background-color: #f3f4f6; /* Color gris claro */
+    height: 50vh;
+    background-color: #618bde; /* Color gris claro */
   }
-  
+
   .box {
-    background: white;
+    background: rgb(66, 26, 226);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     width: 300px;
     text-align: center;
   }
-  
+
   input {
-    width: 100%;
+    width: 300px;
     padding: 10px;
     margin-top: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     outline: none;
+    text-align: center;
   }
-  
+
   input:focus {
     border-color: #3b82f6; /* Azul */
     box-shadow: 0 0 5px rgba(59, 130, 246, 0.5);
+
   }
-  
