--- a/src/app/packet/packet.component.css
+++ b/src/app/packet/packet.component.css
@@ -27,12 +27,12 @@ div > div p:first-child {
 }
 
 /* Para el contenedor cuando no hay usuarios */
-#noUsers {
+#noPackets {
   text-align: center;
   font-size: 18px;
   color: #999;
   padding: 20px;
-  background-color: #f5f5f5;
+  background-color: #faaeae;
   border-radius: 5px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
@@ -57,7 +57,7 @@ div > div:empty {
     font-size: 13px;
   }
 
-  #noUsers {
+  #noPackets {
     font-size: 16px;
   }
 }
