--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,19 +1,10 @@
-
-<section>
-
-    @if(isLoggedIn)
-    {
-        <p>Bienvenido, {{username}}</p>
-        <img
-        (click)="greet()"
-        alt="photo" src="https://github.com/VicencJosep.png" />
-    }
-    @else
-    {
-        <p>Inica sesión mongo</p>
-        <button (click)="isLoggedIn= true" >Log In</button>
-    }
-<app-games></app-games>
-
-</section>
-
+<div *ngIf="usersList.length > 0">
+  <div *ngFor="let user of usersList; let i = index; trackBy: trackByUserId">
+    <p>Username del usuario: {{ user.name }}</p>
+    <p>Edad del usuario: {{ user.phone }}</p>
+    <p>Email del usuario: {{ user.email }}</p>
+  </div>
+</div>
+<ng-template #noUsers>
+  <div>No hay usuarios disponibles</div>
+</ng-template>
