--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1 class = "title">TRACK-IT BACK OFFICE</h1>
+<app-header></app-header>
 <app-left-box></app-left-box>
+
 <!-- The routed views render in the <router-outlet>-->
 
