Con buscador que busca por nombre

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -34,7 +34,7 @@ input {
 
 button {
   border: none;
-  background-color: #4CAF50;
+  background-color: #557eed;
   color: #fff;
   padding: 10px 20px;
   border-radius: 30px;
@@ -43,7 +43,7 @@ button {
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: #331a7d;
 }
 .title {
   text-align: center;
