--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,8 @@
-<p>search works!</p>
+<h2>Resultados de búsqueda para "{{ searchTerm }}"</h2>
+<ul>
+  <li *ngFor="let user of filteredUsers">
+    {{ user.name }} - {{ user.email }}
+  </li>
+</ul>
+<p *ngIf="filteredUsers.length === 0">No se encontraron resultados.</p>
+
