aun no va que busque paquetes y users

--- a/src/app/left-box/left-box.component.html
+++ b/src/app/left-box/left-box.component.html
@@ -5,7 +5,8 @@
         <a class="button"
           routerLink="/packet-component"
           routerLinkActive="activebutton"
-          ariaCurrentWhenActive="page">
+          ariaCurrentWhenActive="page"
+          (click)="sendPacketMessage()">
           Packets
         </a>
       </li>
@@ -13,7 +14,8 @@
         <a class="button"
           routerLink="/user-component"
           routerLinkActive="activebutton"
-          ariaCurrentWhenActive="page">
+          ariaCurrentWhenActive="page"
+          (click)="sendUserMessage()">
           Users
         </a>
       </li>
