--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <h1 class = "title">TRACK-IT BACK OFFICE</h1>
+<app-register-button></app-register-button>
 <app-left-box></app-left-box>
-<!-- The routed views render in the <router-outlet>-->
-
