--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
-    color-scheme: light dark;
+    color-scheme: light yellow;
 }
 
 body {
