--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -8,19 +8,19 @@
   <!-- Formulario de Registro de Usuario -->
   <form *ngIf="activeTab === 'user'" [formGroup]="registerForm" (ngSubmit)="registerUser()">
     <label for="name">Nombre de Usuario:</label>
-    <input type="text" id="name" formControlName="name" required><br><br>
+    <input type="text" id="name" formControlName="name" required>
 
     <label for="email">Email:</label>
-    <input type="email" id="email" formControlName="email" required><br><br>
+    <input type="email" id="email" formControlName="email" required>
 
     <label for="password">Contraseña:</label>
-    <input type="password" id="password" formControlName="password" required><br><br>
+    <input type="password" id="password" formControlName="password" required>
 
     <label for="phone">Teléfono:</label>
-    <input type="text" id="phone" formControlName="phone" required><br><br>
+    <input type="text" id="phone" formControlName="phone" required>
 
     <label for="packets">Packets (JSON):</label>
-    <textarea type="text" id="packets" formControlName="packets" required></textarea><br><br>
+    <textarea id="packets" formControlName="packets" required></textarea>
 
     <button type="submit" class="button add-button">Registrar Usuario</button>
   </form>
@@ -28,13 +28,13 @@
   <!-- Formulario de Registro de Paquete -->
   <form *ngIf="activeTab === 'packet'" [formGroup]="packetForm" (ngSubmit)="registerPacket()">
     <label for="packet-name">Nombre del Paquete:</label>
-    <input type="text" id="packet-name" formControlName="name" required><br><br>
+    <input type="text" id="packet-name" formControlName="name" required>
 
     <label for="packet-description">Descripción:</label>
-    <input type="text" id="packet-description" formControlName="description" required><br><br>
+    <input type="text" id="packet-description" formControlName="description" required>
 
     <label for="packet-status">Estatus:</label>
-    <input type="text" id="packet-status" formControlName="status" required><br><br>
+    <input type="text" id="packet-status" formControlName="status" required>
 
     <button type="submit" class="button add-button">Registrar Paquete</button>
   </form>
