--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -61,3 +61,39 @@ div > div:empty {
     font-size: 16px;
   }
 }
+
+.button {
+  box-shadow: inset 0 1px 0 0 #ffffff;
+  background: #ffffff linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  color: #666666;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #ffffff;
+  outline: none;
+  transition: all 0.3s ease;
+  margin-left: 0px;
+}
+
+.delete-button {
+  background: #871111 linear-gradient(to bottom, #ff3300 5%, #6e1318 100%);
+  border: none;
+  border-radius: 4px;
+  color: white;
+  text-shadow: 0 1px 0 #1e7e34;
+}
+
+.delete-button:hover {
+  background: #871111 linear-gradient(to bottom, #3c0c00 5%, #3c0003 100%);
+}
+
+.delete-button:active {
+  background: #871111 linear-gradient(to bottom, #ff3300 5%, #6e1318 100%);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
+}
