--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -97,3 +97,28 @@ div > div:empty {
   background: #871111 linear-gradient(to bottom, #ff3300 5%, #6e1318 100%);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
 }
+.deactivate-button {
+  background: #28a745 linear-gradient(to bottom, #28a745 5%, #218838 100%);
+  border: none;
+  border-radius: 4px;
+  color: white;
+  text-shadow: 0 1px 0 #1e7e34;
+}
+
+.deactivate-button:hover {
+  background: #218838 linear-gradient(to bottom, #218838 5%, #1e7e34 100%);
+}
+
+.deactivate-button:active {
+  background: #1e7e34 linear-gradient(to bottom, #1e7e34 5%, #155724 100%);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+.bg-blue {
+  background-color: blue;
+  color: white; /* Opcional: para que el texto sea legible */
+}
+
+.bg-red {
+  background-color: red;
+  color: white; /* Opcional: para que el texto sea legible */
+}
