--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -6,11 +6,11 @@
   <div *ngIf="usersList.length > 0">
     <table class="table">
       <tbody>
-        <tr *ngFor="let usuario of usersList">
+        <tr *ngFor="let usuario of usersList" [ngClass]="{'bg-red': !usuario.available}" >
           <td>
             <input type="checkbox" [checked]="usuario.seleccionado" (change)="toggleSeleccion(usuario)" />
           </td>
-          <td>
+          <td >
             <p>Username del usuario: {{ usuario.name }}</p>
             <p>Teléfono del usuario: {{ usuario.phone }}</p>
             <p>Email del usuario: {{ usuario.email }}</p>
@@ -25,6 +25,7 @@
 
 <div>
   <a class="button delete-button" (click)="confirmarEliminacion()">Eliminar Usuarios Seleccionados</a>
+  <a class="button deactivate-button" (click)="desactivarUsuarios()">Desactivar Usuarios Seleccionados</a>
 </div>
 
 
