--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-container">
-  <img src="image.png" alt="Track It Logo" class="header-logo">
+  <img src="logoTrackIt.jpg" alt="Track It Logo" class="header-logo">
   <div class="search-container">
     <h1 class="title">TRACK-IT BACK OFFICE</h1>
     <div class="search-box">
