--- a/src/app/register-button/register-button.component.css
+++ b/src/app/register-button/register-button.component.css
@@ -1,36 +1,39 @@
 .button {
-    box-shadow: inset 0 1px 0 0 #ffffff;
-    background: #ffffff linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
-    border-radius: 6px;
-    border: 1px solid #dcdcdc;
-    display: inline-block;
-    cursor: pointer;
-    color: #666666;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 10px 20px;
-    text-decoration: none;
-    text-shadow: 0 1px 0 #ffffff;
-    outline: none;
-    transition: all 0.3s ease;
-    margin-left: 250px;
-  }
-  
+  background-color: #557eed;
+  box-shadow: inset 0 1px 0 0 #ffffff;
+  background: #557eed linear-gradient(to bottom, #557eed 5%, #3d50dc 100%);
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  color: #666666;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #ffffff;
+  outline: none;
+  transition: all 0.3s ease;
+  margin-left: 250px;
+}
+
+
   /* Estilo adicional para que resalte como botón de acción */
-  .add-button {
-    background: #28a745 linear-gradient(to bottom, #28a745 5%, #218838 100%);
-    border: none;
-    border-radius: 4px;
-    color: white;
-    text-shadow: 0 1px 0 #1e7e34;
+  .button {
+    background-color: #557eed;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background 0.3s ease;
   }
-  
+
   .add-button:hover {
-    background: #218838 linear-gradient(to bottom, #218838 5%, #1e7e34 100%);
+    background-color: #331a7d;
   }
-  
+
   .add-button:active {
-    background: #1e7e34 linear-gradient(to bottom, #1e7e34 5%, #155724 100%);
+    background: #1e7e34 linear-gradient(to bottom, #122a6c 5%, #1125bd 100%);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
   }
