--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,3 @@
-
 <ng-template #noUsers>
   <div>No hay usuarios disponibles</div>
 </ng-template>
@@ -15,6 +14,10 @@
             <p>Teléfono del usuario: {{ usuario.phone }}</p>
             <p>Email del usuario: {{ usuario.email }}</p>
           </td>
+          <td>
+            <!-- Botón para ver paquetes -->
+            <button class="view-packages-button" (click)="verPaquetes(usuario)">Ver Paquetes</button>
+          </td>
         </tr>
       </tbody>
     </table>
@@ -26,6 +29,12 @@
   <a class="button deactivate-button" (click)="desactivarUsuarios()">Desactivar Usuarios Seleccionados</a>
 </div>
 
+<app-user-packages
+  *ngIf="mostrarModal"
+  [paquetes]="paquetesSeleccionados"
+  (close)="cerrarModal()">
+</app-user-packages>
+
 <ng-template #noUsers>
   <div>No hay usuarios disponibles</div>
 </ng-template>
@@ -36,5 +45,3 @@
   [pageSizeOptions]="[3, 5, 10]"
   (page)="onPageChange($event)">
 </mat-paginator>
-
-
