--- a/src/app/packet/packet.component.html
+++ b/src/app/packet/packet.component.html
@@ -1,19 +1,43 @@
 <!-- Lista de paquetes paginados -->
+<div>
 <div *ngIf="displayedPackets.length > 0; else noPackets">
-  <div *ngFor="let packet of displayedPackets; trackBy: trackByPacketId">
-    <p><strong>Nombre:</strong> {{ packet.name }}</p>
-    <p><strong>Descripción:</strong> {{ packet.description }}</p>
-    <p><strong>Estatus:</strong> {{ packet.status }}</p>
-  </div>
+  <table class="table">
+    <tbody>
+      <tr *ngFor="let packet of displayedPackets; trackBy: trackByPacketId">
+        <td class="checkbox-cell">
+          <input type="checkbox" [checked]="packet.seleccionado" (change)="toggleSeleccion(packet)" />
+        </td>
+        <td class="user-info">
+          <p><strong>Nombre:</strong> {{ packet.name }}</p>
+          <p><strong>Descripción:</strong> {{ packet.description }}</p>
+          <p><strong>Estatus:</strong> {{ packet.status }}</p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
-
+</div>
 <!-- Mensaje si no hay paquetes -->
 <ng-template #noPackets>
   <div>No hay paquetes disponibles</div>
 </ng-template>
 
+<div>
+  <a class="button deactivate-button" (click)="confirmarAsignacion()">Asignar Paquetes</a>
+</div>
+
+<div class="modal-overlay" *ngIf="mostrarModal">
+  <div class="modal-content">
+    <h2>Indique el nombre del usuario a quien quiere asignar estos paquetes</h2>
+    <div>
+      <input  [(ngModel)]="searchTerm" placeholder="Nombre de usuario..." />
+      <button class="close-button" (click)="search()">Buscar</button>
+    </div>
+  </div>
+</div>
+
 <!-- Paginador de Angular Material -->
-<mat-paginator 
+<mat-paginator
   [length]="totalItems"
   [pageSize]="itemsPerPage"
   [pageSizeOptions]="[3, 5, 10]"
