--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -83,7 +83,7 @@ div > div:empty {
 }
 
 .delete-button {
-  background: #871111 linear-gradient(to bottom, #ff3300 5%, #6e1318 100%);
+  background: #ff9100 linear-gradient(to bottom, #ff9100 5%, #815117 100%);
   border: none;
   padding: 10px 20px;
   border-radius: 30px;
@@ -99,6 +99,7 @@ div > div:empty {
   background: #871111 linear-gradient(to bottom, #ff3300 5%, #6e1318 100%);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
 }
+
 .deactivate-button {
   background: #1e7e34 linear-gradient(to bottom, #274cb1 5%, #1125bd 100%);
   border: none;
@@ -116,27 +117,31 @@ div > div:empty {
   background: #1e7e34 linear-gradient(to bottom, #1e7e34 5%, #155724 100%);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
 }
-/* Estilos para la tabla */
+
+/* Estilo del contenedor principal de los usuarios */
 .usuario-lista {
-  width: 100%;
+  width: 100%; /* Cambiado de 100% a 80% o el valor que prefieras */
+  max-width: 1600px; /* Añade un máximo ancho si lo deseas */
+  margin: 10px auto; /* Centra el contenedor */
 }
 
+/* Estilo de la tabla */
 .table {
-  width: 100%;
+  width: 100%; /* Mantiene el 100% del contenedor padre (usuario-lista) */
   border-collapse: collapse;
-  table-layout: fixed; /* Esto ayuda a que las celdas se expandan correctamente */
+  table-layout: fixed;
 }
 
 /* Estilo para las filas */
 .table tr {
-  width: 100%;
-  display: table; /* Fuerza a que la fila se comporte como tabla */
+  display: table-row;
 }
 
 /* Estilo para las celdas */
 .table td {
   padding: 12px 15px;
   border-bottom: 1px solid #e0e0e0;
+  vertical-align: top; /* Alinea el contenido en la parte superior */
 }
 
 /* Celda del checkbox */
@@ -146,7 +151,14 @@ div > div:empty {
 
 /* Celda de información del usuario */
 .user-info {
-  width: auto; /* Ocupa el resto del espacio */
+  width: auto; /* Ocupa el espacio disponible */
+  word-wrap: break-word; /* Permite que el texto largo se ajuste */
+}
+
+/* Celda del botón de acción */
+.action-cell {
+  width: 120px; /* Ancho fijo para el botón */
+  text-align: right; /* Alinea el botón a la derecha */
 }
 
 /* Estilo para filas no disponibles */
@@ -163,4 +175,26 @@ div > div:empty {
 .usuario-lista > div {
   width: 100%;
   display: block;
+}
+
+/* Estilo del botón */
+.view-packages-button {
+  background-color: #ff9100;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 12px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  white-space: nowrap; /* Evita que el texto del botón se divida en varias líneas */
+}
+
+.view-packages-button:hover {
+  background-color: #b37700;
+}
+
+.view-packages-button:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(133, 89, 1, 0.5);
 }
